# DVDStyler

./: .cdtproject  .cproject  .cvsignore  .gitignore  AUTHORS  ChangeLog  DVDStyler.cbp  DVDStyler.dev  INSTALL  Info.plist.in  Makefile.am  TODO  acinclude.m4  configure.ac  mkinstalldirs  pad-osx.xml  pad-src.xml  pad.xml
.csettings/: cdt.managedbuild.toolchain.gnu.mingw.base.132920510_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.mingw.base.132920510_org.eclipse.cdt.core.pathentry  cdt.managedbuild.toolchain.gnu.mingw.base.132920510_org.eclipse.cdt.core.settings
backgrounds/: .gitignore  Makefile.am
buttons/: Makefile.am  arrow-blue.xml  arrow-cool.xml  arrow-double.xml  arrow-gold.xml  arrow-mirror-left.xml  arrow-mirror-right.xml  arrow-red.xml  arrow-star.xml  arrow-text-left.xml  arrow-text-right.xml  arrow2.xml  arrow3.xml  arrow3d-left.xml  arrow3d-right.xml  buttons.lst  cancel2.xml  hand-left.xml  hand-right.xml  home-v2.xml  movie.xml  ok2.xml  settings.xml
data/: .cvsignore  Makefile.am  dvdstyler.desktop
docs/: .cvsignore  DVDStylerGuide_ca.xml  DVDStylerGuide_de.xml  DVDStylerGuide_el.xml  DVDStylerGuide_en.xml  DVDStylerGuide_es.xml  DVDStylerGuide_eu.xml  DVDStylerGuide_fi.xml  DVDStylerGuide_fr.xml  DVDStylerGuide_hu.xml  DVDStylerGuide_it.xml  DVDStylerGuide_ja.xml  DVDStylerGuide_nb.xml  DVDStylerGuide_pl.xml  DVDStylerGuide_pt.xml  DVDStylerGuide_pt_BR.xml  DVDStylerGuide_ro.xml  DVDStylerGuide_ru.xml  DVDStylerGuide_si.xml  DVDStylerGuide_uk.xml  DVDStylerGuide_zh_CN.xml  DVDStylerGuide_zh_TW.xml  Makefile.am  dvdstyler.1  htmlhelp.hhp  toc.hhc
git/DVDStyler/: .project
installer/: DVDStyler.iss  DVDStylerPortable.iss  Important notes.rtf  Info.rtf
installer/Languages/: Armenian.islu  SpanishArg.isl
installer/install.win32/: .cvsignore  DVDStyler.iss  DVDStylerPortable.iss
installer/install.win32/Languages/: Arabic.isl
locale/: .cvsignore  .gitignore  Makefile.in  ar.po  bg.po  ca.po  cs.po  da.po  de.po  dvdstyler.pot  el.po  es.po  es_ar.po  eu.po  fi.po  fr.po  hu.po  hy.po  it.po  ja.po  ko.po  mk.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  uz.po  vi.po  zh_CN.po  zh_TW.po
locale/bitmaps/: arab_league.png.h  argentina.png.h  armenia.png.h  basque_country.png.h  brazil.png.h  bulgaria.png.h  catalonia.png.h  czech.png.h  denmark.png.h  finland.png.h  france.png.h  greece.png.h  japan.png.h  macedonia.png.h  netherlands.png.h  norway.png.h  romania.png.h  serbia.png.h  slovakia.png.h  slovenia.png.h  sweden.png.h  ukraine.png.h  uzbekistan.png.h  vietnam.png.h
objects/: Makefile.am  text-v2.xml
src/: .cvsignore  .gitignore  About.cpp  About.h  AnimationDlg.cpp  AnimationDlg.h  AudioPropDlg.cpp  AudioPropDlg.h  Authors.h  BurnDlg.cpp  BurnDlg.h  BurnDlgOSX.mm  Cache.cpp  Cache.h  Cell.cpp  Cell.h  ChaptersDlg.cpp  ChaptersDlg.h  Config.cpp  Config.h  DVD.cpp  DVD.h  DVDAction.cpp  DVDAction.h  DVDPropDlg.cpp  DVDPropDlg.h  DirCtrl.cpp  DirCtrl.h  Languages.cpp  Languages.h  MPEG.cpp  MPEG.h  MainWin.cpp  MainWin.h  Makefile.am  Menu.cpp  Menu.h  MenuActionsDlg.cpp  MenuActionsDlg.h  MenuCellsDlg.cpp  (+105 more)
src/German/: ff_vbr.ini
src/rc/: .cvsignore  .gitignore  DVDStyler.rc  Makefile.am  addVideo.png.h  dvdOptions.png.h  dvdstyler.icns  dvdstyler.png.h  error.png.h  files.png.h  help.png.h  justifyCenter.png.h  justifyCenterSelected.png.h  justifyLeft.png.h  justifyLeftSelected.png.h  justifyRight.png.h  justifyRightSelected.png.h  logo.png.h  logo.xcf  minus.png.h  new.png.h  noaudio.png.h  ok.png.h  open.png.h  plus.png.h  refresh.png.h  rotate.cur  run.png.h  save.png.h  settings.png.h
templates/: Makefile.am  category.xml
transitions/: Makefile.am
wxVillaLib/: .cvsignore  ImageProc.cpp  ImageProc.h  Makefile.am  PipeExecute.cpp  PipeExecute.h  ProgramProcess.cpp  ProgramProcess.h  PropDlg.cpp  PropDlg.h  SConv.cpp  SConv.h  SingleThumbnailDlg.cpp  SingleThumbnailDlg.h  ThumbnailFactory.cpp  ThumbnailFactory.h  Thumbnails.cpp  Thumbnails.h  VerticalToolbar.cpp  VerticalToolbar.h  imagjpg.cpp  imagjpg.h  thumb_md5.cpp  utils.cpp  utils.h
wxVillaLib/rc/: delete.png.h  loading.png.h  noread.png.h  png2c.py  regular.png.h  subtitle.png.h
wxsmith/: AnimationDlg.wxs  AudioPropDlg.wxs  BurnDlg.wxs  ChaptersDlg.wxs  MenuActionsDlg.wxs  MenuCellsDlg.wxs  ProgressDlg.wxs  SlideDlg.wxs  SubtitlePropDlg.wxs  TemplateDlg.wxs  VideoFrameDlg.wxs  VideoPropDlg.wxs
