pkgdatadir=@datadir@/@PACKAGE@/templates/Basic
pkgdata_DATA = Basic/*.dvdt Basic/*.png

pkgdata2dir=@datadir@/@PACKAGE@/templates/Birthday
pkgdata2_DATA = Birthday/*.dvdt Birthday/*.png

pkgdata3dir=@datadir@/@PACKAGE@/templates/Christmas
pkgdata3_DATA = Christmas/*.dvdt Christmas/*.png

pkgdata4dir=@datadir@/@PACKAGE@/templates/Miscellaneous
pkgdata4_DATA = Miscellaneous/*.dvdt Miscellaneous/*.png

pkgdata5dir=@datadir@/@PACKAGE@/templates/Nature
pkgdata5_DATA = Nature/*.dvdt Nature/*.png

pkgdata6dir=@datadir@/@PACKAGE@/templates/Seasons
pkgdata6_DATA = Seasons/*.dvdt Seasons/*.png

pkgdata7dir=@datadir@/@PACKAGE@/templates/Travel
pkgdata7_DATA = Travel/*.dvdt Travel/*.png

pkgdata8dir=@datadir@/@PACKAGE@/templates/Wedding
pkgdata8_DATA = Wedding/*.dvdt Wedding/*.png
