noinst_LIBRARIES = libwxvilla.a
libwxvilla_a_SOURCES = ImageProc.cpp imagjpg.cpp\
 PipeExecute.cpp PropDlg.cpp SConv.cpp SingleThumbnailDlg.cpp \
 Thumbnails.cpp ThumbnailFactory.cpp ProgramProcess.cpp\
 utils.cpp VerticalToolbar.cpp
AM_CXXFLAGS = @CXXFLAGS@ @GNOMEUI2_CFLAGS@ @LIBEXIF_CFLAGS@ -DWX_SVG
